--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "yahtzee-app",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://catevika.github.io/UDEMY_Dice-App/",
 	"dependencies": {
 		"gh-pages": "^2.0.1",
 		"react": "^16.8.6",
@@ -14,9 +13,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
