--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
 	"name": "yahtzee-app",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://Catevika.github.io/UDEMY_Yahtzee_App",
 	"dependencies": {
 		"gh-pages": "^2.0.1",
+		"node-sass": "^4.13.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-scripts": "3.0.1",
+		"react-scripts": "^3.3.0",
 		"typescript": "^3.5.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
